force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazenará as NFs populadas pela integração.</description>
    <label>Nota Fiscal</label>
    <nameField>
        <label>Nota Fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas Fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>