force-app/main/default/objects/Invoice__c/fields/ActionDate__c.field-meta.xml
<CustomField>
    <fullName>ActionDate__c</fullName>
    <label>ActionDate</label>
    <type>DateTime</type>
</CustomField>