force-app/main/default/objects/Invoice__c/fields/AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInfo__c</fullName>
    <label>Informações Adicionais</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>