force-app/main/default/objects/Invoice__c/fields/BusinessUnitCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitCode__c</fullName>
    <label>BusinessUnitCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>