force-app/main/default/objects/Invoice__c/fields/EletronicKey__c.field-meta.xml
<CustomField>
    <fullName>EletronicKey__c</fullName>
    <label>Chave Eletrônica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>