force-app/main/default/objects/Invoice__c/fields/EmissionDate__c.field-meta.xml
<CustomField>
    <fullName>EmissionDate__c</fullName>
    <label>Data de Emissão</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>