force-app/main/default/objects/Invoice__c/fields/EmitterCityName__c.field-meta.xml
<CustomField>
    <fullName>EmitterCityName__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>