force-app/main/default/objects/Invoice__c/fields/EmitterCorporateName__c.field-meta.xml
<CustomField>
    <fullName>EmitterCorporateName__c</fullName>
    <label>Razão Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>