force-app/main/default/objects/Invoice__c/fields/EmitterCountryName__c.field-meta.xml
<CustomField>
    <fullName>EmitterCountryName__c</fullName>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>