force-app/main/default/objects/Invoice__c/fields/EmitterEmail__c.field-meta.xml
<CustomField>
    <fullName>EmitterEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>