force-app/main/default/objects/Invoice__c/fields/EmitterNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>EmitterNeighborhood__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>