force-app/main/default/objects/Invoice__c/fields/EmitterPhone__c.field-meta.xml
<CustomField>
    <fullName>EmitterPhone__c</fullName>
    <label>Telefone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>