force-app/main/default/objects/Invoice__c/fields/EmitterTradeName__c.field-meta.xml
<CustomField>
    <fullName>EmitterTradeName__c</fullName>
    <label>tradeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>