force-app/main/default/objects/Invoice__c/fields/InvoiceSerie__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSerie__c</fullName>
    <label>Série da Nota</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>