force-app/main/default/objects/Invoice__c/fields/IsOut__c.field-meta.xml
<CustomField>
    <fullName>IsOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>identify if document means outgoing invoice or incoming invoice</description>
    <label>Nota de Saída ?</label>
    <type>Checkbox</type>
</CustomField>