force-app/main/default/objects/Invoice__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Notas Fiscais</relationshipLabel>
    <relationshipName>Notas_Fiscais</relationshipName>
    <type>Lookup</type>
</CustomField>