force-app/main/default/objects/Invoice__c/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <label>Natureza da Operação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>