force-app/main/default/objects/Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Nota Fiscal</relationshipLabel>
    <relationshipName>NotaFiscal</relationshipName>
    <type>Lookup</type>
</CustomField>