force-app/main/default/objects/Invoice__c/fields/OrderInternalNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderInternalNumber__c</fullName>
    <label>Número Interno de Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>