force-app/main/default/objects/Invoice__c/fields/OrderOriginNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderOriginNumber__c</fullName>
    <label>Número Original de Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>