force-app/main/default/objects/Invoice__c/fields/ReceiverCountryName__c.field-meta.xml
<CustomField>
    <fullName>ReceiverCountryName__c</fullName>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>