force-app/main/default/objects/Invoice__c/fields/ReceiverDocumentType__c.field-meta.xml
<CustomField>
    <fullName>ReceiverDocumentType__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoDocumento</valueSetName>
    </valueSet>
</CustomField>