force-app/main/default/objects/Invoice__c/fields/ReceiverName__c.field-meta.xml
<CustomField>
    <fullName>ReceiverName__c</fullName>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>