force-app/main/default/objects/Invoice__c/fields/ReceiverNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>ReceiverNeighborhood__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>