force-app/main/default/objects/Invoice__c/fields/ReceiverNumber__c.field-meta.xml
<CustomField>
    <fullName>ReceiverNumber__c</fullName>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>