force-app/main/default/objects/Invoice__c/fields/ReceiverPhone__c.field-meta.xml
<CustomField>
    <fullName>ReceiverPhone__c</fullName>
    <label>Telefone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>