force-app/main/default/objects/Invoice__c/fields/ReceiverStreet__c.field-meta.xml
<CustomField>
    <fullName>ReceiverStreet__c</fullName>
    <label>Rua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>