force-app/main/default/objects/Invoice__c/fields/ReceiverZipCode__c.field-meta.xml
<CustomField>
    <fullName>ReceiverZipCode__c</fullName>
    <label>CEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>