force-app/main/default/objects/Invoice__c/fields/SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel__c</fullName>
    <label>Canal de Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>