force-app/main/default/objects/Invoice__c/fields/SefazAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>SefazAuthorizationDate__c</fullName>
    <label>Data de Autorização</label>
    <type>DateTime</type>
</CustomField>