force-app/main/default/objects/Invoice__c/fields/SefazCancellationAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>SefazCancellationAuthorizationDate__c</fullName>
    <label>Data de Autorização do Cancelamento</label>
    <type>DateTime</type>
</CustomField>