force-app/main/default/objects/Invoice__c/fields/SefazCancellationProtocol__c.field-meta.xml
<CustomField>
    <fullName>SefazCancellationProtocol__c</fullName>
    <label>Protocolo de Cancelamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>