force-app/main/default/objects/Invoice__c/fields/SefazFreigthType__c.field-meta.xml
<CustomField>
    <fullName>SefazFreigthType__c</fullName>
    <label>Tipo de Frete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>FOB</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>CIF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>