force-app/main/default/objects/Invoice__c/fields/SefazGnreValue__c.field-meta.xml
<CustomField>
    <fullName>SefazGnreValue__c</fullName>
    <label>GnreValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>