force-app/main/default/objects/Invoice__c/fields/SefazKey__c.field-meta.xml
<CustomField>
    <fullName>SefazKey__c</fullName>
    <externalId>true</externalId>
    <label>Chave Sefaz</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>