force-app/main/default/objects/Invoice__c/fields/SefazOriginalKey__c.field-meta.xml
<CustomField>
    <fullName>SefazOriginalKey__c</fullName>
    <description>Original nfe key. This field is fill for return cases.</description>
    <label>Chave Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>