force-app/main/default/objects/Invoice__c/fields/SefazProtocol__c.field-meta.xml
<CustomField>
    <fullName>SefazProtocol__c</fullName>
    <label>Protocolo Sefaz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>