force-app/main/default/objects/Invoice__c/fields/SefazStatus__c.field-meta.xml
<CustomField>
    <fullName>SefazStatus__c</fullName>
    <description>Status nfe: are NF AUTORIZADA, NF CANCELADA</description>
    <label>Status Sefaz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>