force-app/main/default/objects/Invoice__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>