force-app/main/default/objects/Invoice__c/fields/ShippingDocument__c.field-meta.xml
<CustomField>
    <fullName>ShippingDocument__c</fullName>
    <label>Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>