force-app/main/default/objects/Invoice__c/fields/ShippingName__c.field-meta.xml
<CustomField>
    <fullName>ShippingName__c</fullName>
    <label>Nome Transportadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>