force-app/main/default/objects/Invoice__c/fields/ShippingStateInscription__c.field-meta.xml
<CustomField>
    <fullName>ShippingStateInscription__c</fullName>
    <label>Inscrição Estadual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>