force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>confirmed</fullName>
                <label>Confirmado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>