force-app/main/default/objects/Invoice__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <label>StoreCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>