force-app/main/default/objects/Invoice__c/fields/TotalCofinsValue__c.field-meta.xml
<CustomField>
    <fullName>TotalCofinsValue__c</fullName>
    <description>total cofins Value</description>
    <label>Valor de COFINS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>