force-app/main/default/objects/Invoice__c/fields/TotalDistinctItem__c.field-meta.xml
<CustomField>
    <fullName>TotalDistinctItem__c</fullName>
    <description>total of distinct item</description>
    <label>distinctItem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>