force-app/main/default/objects/Invoice__c/fields/TotalFreigth__c.field-meta.xml
<CustomField>
    <fullName>TotalFreigth__c</fullName>
    <description>total freigth</description>
    <label>Valor do Frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>