force-app/main/default/objects/Invoice__c/fields/TotalGrossWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossWeight__c</fullName>
    <label>Peso Bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>