force-app/main/default/objects/Invoice__c/fields/TotalIcms__c.field-meta.xml
<CustomField>
    <fullName>TotalIcms__c</fullName>
    <description>Total value of icms</description>
    <label>Valor de ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>