force-app/main/default/objects/Invoice__c/fields/TotalIcmsBaseST__c.field-meta.xml
<CustomField>
    <fullName>TotalIcmsBaseST__c</fullName>
    <label>Base de ICMS ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>