force-app/main/default/objects/Invoice__c/fields/TotalIcmsBaseValue__c.field-meta.xml
<CustomField>
    <fullName>TotalIcmsBaseValue__c</fullName>
    <description>Total value of icms base</description>
    <label>Base de ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>