force-app/main/default/objects/Invoice__c/fields/TotalIcmsValueST__c.field-meta.xml
<CustomField>
    <fullName>TotalIcmsValueST__c</fullName>
    <label>Valor de ICMS ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>