force-app/main/default/objects/Invoice__c/fields/TotalInsurance__c.field-meta.xml
<CustomField>
    <fullName>TotalInsurance__c</fullName>
    <description>total insurance</description>
    <label>Valor do Seguro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>