force-app/main/default/objects/Invoice__c/fields/TotalInvoiceValue__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceValue__c</fullName>
    <label>Valor da Nota Fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>