force-app/main/default/objects/Invoice__c/fields/TotalIpiValue__c.field-meta.xml
<CustomField>
    <fullName>TotalIpiValue__c</fullName>
    <description>total ipi Value</description>
    <label>Valor de IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>