force-app/main/default/objects/Invoice__c/fields/TotalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalNetWeight__c</fullName>
    <label>Peso Líquido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>