force-app/main/default/objects/Invoice__c/fields/TotalPisValue__c.field-meta.xml
<CustomField>
    <fullName>TotalPisValue__c</fullName>
    <description>total pis Value</description>
    <label>Valor do PIS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>