force-app/main/default/objects/Invoice__c/fields/TotalProductsValue__c.field-meta.xml
<CustomField>
    <fullName>TotalProductsValue__c</fullName>
    <description>total product value</description>
    <label>Valor dos Produtos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>