force-app/main/default/objects/Invoice__c/fields/TotalVolumes__c.field-meta.xml
<CustomField>
    <fullName>TotalVolumes__c</fullName>
    <description>number of invoice volumes</description>
    <label>Número de Volumes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>