force-app/main/default/objects/Invoice__c/fields/TransId__c.field-meta.xml
<CustomField>
    <fullName>TransId__c</fullName>
    <label>Id de Transação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>