force-app/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>invoice type NFe or CFe</description>
    <label>Tipo de Nota</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NFe</fullName>
            </value>
            <value>
                <fullName>CFe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>